# sakerhetssm-wargame-problem

./: README.md  ctf.yml
crate-ctf/2020/reversing/Androidrev/bulbula/app/: CMakeLists.txt  build.gradle
crate-ctf/2020/reversing/Androidrev/bulbula/app/src/androidTest/java/com/bulbula/game/: ExampleInstrumentedTest.java
crate-ctf/2020/reversing/Androidrev/bulbula/app/src/main/: AndroidManifest.xml
crate-ctf/2020/reversing/Androidrev/bulbula/app/src/main/cpp/: scorechecker.cpp
crate-ctf/2020/reversing/Androidrev/bulbula/app/src/main/java/com/bulbula/game/: Bubble.java  MainActivity.java  StartActivity.java
crate-ctf/2020/reversing/Androidrev/bulbula/app/src/main/java/com/bulbula/game/utils/: HighScoreHelper.java  (+3 more)
crate-ctf/2020/reversing/Androidrev/bulbula/app/src/main/res/drawable/: ic_cards_heart.xml  ic_flag_checkered.xml  ic_heart_broken.xml  ic_heart_multiple.xml  ic_heart_off.xml  ic_launcher_background.xml  ic_settings.xml  ic_star.xml  ic_volume_high.xml  ic_volume_low.xml  ic_volume_medium.xml  ic_volume_off.xml  ripple_effect.xml
crate-ctf/2020/reversing/Androidrev/bulbula/app/src/main/res/font/: my_custom_font.xml
crate-ctf/2020/reversing/Androidrev/bulbula/app/src/main/res/layout/: activity_main.xml  activity_start.xml
crate-ctf/2020/reversing/Androidrev/bulbula/app/src/main/res/mipmap-anydpi-v26/: ic_bubbles.xml
crate-ctf/2020/reversing/Androidrev/bulbula/app/src/main/res/values/: colors.xml  ic_bubble_blue_bg.xml  strings.xml  styles.xml
crate-ctf/2020/reversing/Androidrev/bulbula/app/src/test/java/com/bulbula/game/: ExampleUnitTest.java
(+1924 files in other folders)
